GP-46595: Fix tables horizontal scroll.

--- a/streams/danube/css/source/customization.css
+++ b/streams/danube/css/source/customization.css
@@ -604,3 +604,7 @@ html.crm-standalone  nav.breadcrumb {
 .crm-container #mainTabContainer ul.ui-tabs-nav a {
     cursor: pointer;
 }
+
+table.dataTable {
+    box-sizing: border-box;
+}
